  * Cleaned up upstream changelog retrieval
  * Migrated from wget to urllib2 for changelog retrieval
  * Only show mintupdate update when available to make sure rules are updated first
  * Removed proxy settings (delegated to APT/Desktop)
  * Fixed "broken packages" bug occuring when some packages need to be removed
  * In history of updates, dates now follow the format YYY.MM.DD

 -- Clement Lefebvre <root@linuxmint.com>  Wed,  23 Mar 2011 13:23:00 +0000

mintupdate (4.2.2) julia; urgency=low

  * Added Czech mirror

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  10 Mar 2011 09:54:00 +0000

mintupdate (4.2.1) julia; urgency=low

  * New mirror in The Netherlands
  * Removed inactive US mirror

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  8 Feb 2011 12:14:00 +0000

mintupdate (4.2.0) julia; urgency=low

  * Changed level descriptions

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Dec 2010 10:47:00 +0000

mintupdate (4.1.9) julia; urgency=low

  * Added Brazilian mirror

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  2 Dec 2010 10:38:00 +0000

mintupdate (4.1.8) julia; urgency=low

  * Added South African mirror

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  22 Nov 2010 21:32:00 +0000

mintupdate (4.1.7) julia; urgency=low

  * Closes properly when requested
  * Typo fixed in status bar

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  26 Oct 2010 17:35:00 +0000

mintupdate (4.1.6) julia; urgency=low

  * Bug fix in error detection.

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  26 Oct 2010 10:55:00 +0000

mintupdate (4.1.5) julia; urgency=low

  * Bug fix: Show download size even when packages are ignored

 -- Clement Lefebvre <root@linuxmint.com>  Sat,  23 Oct 2010 15:33:00 +0000

mintupdate (4.1.4) julia; urgency=low

  * Added two German mirrors

 -- Clement Lefebvre <root@linuxmint.com>  Fri,  22 Oct 2010 15:01:00 +0000

mintupdate (4.1.3) julia; urgency=low

  * Better and faster changelog retrieval  
