@@ -9,6 +9,7 @@ mintupdate (4.2.3) katya; urgency=low
   * Removed proxy settings (delegated to APT/Desktop)
   * Fixed "broken packages" bug occuring when some packages need to be removed
   * In history of updates, dates now follow the format YYY.MM.DD
+  * Fixed permission bug on /tmp/mintUpdate log folder
 
  -- Clement Lefebvre <root@linuxmint.com>  Wed,  23 Mar 2011 13:23:00 +0000
 
